--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "jquery": "^3.6.0",
     "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-proxy": "^1.0.0-alpha.3",
     "koa-router": "^10.1.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "static-koa": "^1.0.2"
   }
 }
